# augment-secret-fix

./: README.md  augment_secret_detector.py  augment_secret_fix.sh  augment_secret_report_1751114305.json  augment_version_manager.py  pyproject.toml  requirements.txt  test_augment_secret_detector.py  verification_results_1751074939.json  vscode_updater.py
.github/workflows/: ci.yml
augment_secret_fix/: __init__.py  cli.py  detector.py  updater.py  version_manager.py
augment_secret_fix.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_detector.py
