[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "augment-secret-fix"
version = "0.2.1"
description = "Comprehensive solution for Augment extension issues, CPU contention, and VSCode updates"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "swipswaps", email = "swipswaps@users.noreply.github.com"}
]
maintainers = [
    {name = "swipswaps", email = "swipswaps@users.noreply.github.com"}
]
keywords = [
    "augment",
    "vscode", 
    "cpu-monitoring",
    "version-management",
    "chat-backup",
    "performance"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration"
]
requires-python = ">=3.8"
dependencies = [
    "psutil>=5.8.0",
    "pathlib2>=2.3.0; python_version<'3.4'"
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "pytest>=7.0.0",
    "pytest-mock>=3.6.0",
    "ruff>=0.1.0"
]
ui = [
    "colorama>=0.4.4",
    "tqdm>=4.64.0"
]
all = [
    "augment-secret-fix[dev,ui]"
]

[project.urls]
Homepage = "https://github.com/swipswaps/augment-secret-fix"
Repository = "https://github.com/swipswaps/augment-secret-fix.git"
Issues = "https://github.com/swipswaps/augment-secret-fix/issues"
Documentation = "https://github.com/swipswaps/augment-secret-fix#readme"

[project.scripts]
augment-fix = "augment_secret_fix.cli:main"
augment-detect = "augment_secret_fix.detector:main"
augment-version = "augment_secret_fix.version_manager:main"
augment-vscode = "augment_secret_fix.updater:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["augment_secret_fix*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]
